<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReceiverForm">

    <TextView
        android:id="@+id/receiverFormHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/FormHeader_height"
        android:background="@android:color/holo_red_light"
        android:padding="12dp"
        android:text="@string/ReceiverFormTitle"
        android:textColor="@color/white"
        android:textSize="@dimen/FormHeader_textSize"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/inputFieldWidth"
        android:layout_height="@dimen/inputFieldHeight"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiverFormEmailInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/FormTitle_emailHint"
            android:inputType="textEmailAddress"
            android:src="@drawable/forminputfield"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/inputFieldWidth"
        android:layout_height="@dimen/inputFieldHeight"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiverFormFullNameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/fullNameHint"
            android:inputType="text"
            android:src="@drawable/forminputfield"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/inputFieldWidth"
        android:layout_height="@dimen/inputFieldHeight"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiverFormContactInfoInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/contactHint"
            android:inputType="text"
            android:src="@drawable/forminputfield"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/inputFieldWidth"
        android:layout_height="@dimen/inputFieldHeight"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiverFormCountryInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/countryHint"
            android:inputType="textEmailAddress"
            android:src="@drawable/forminputfield"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/inputFieldWidth"
        android:layout_height="@dimen/inputFieldHeight"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiverFormAddressInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/addressHint"
            android:inputType="textEmailAddress"
            android:src="@drawable/forminputfield"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/receiverForm_button"
        android:layout_width="@dimen/inputFieldWidth"
        android:layout_height="@dimen/inputFieldHeight"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/receiverformbutton"

        />

</LinearLayout>